--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,10 +1,17 @@
 .navbar {
   display: flex;
+  @media screen and (max-width: 1140px) {
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+  }
 
   &__logo {
-    width: 15rem;
     height: 6.5rem;
     margin-top: 2rem;
+    @media screen and (min-width: 1140px) {
+      width: 15rem;
+    }
     svg {
       width: 100%;
       height: 100%;
@@ -12,9 +19,11 @@
   }
 
   &__searchbar {
-    position: absolute;
-    left: 50%;
-    top: 3.5rem;
-    transform: translateX(-50%);
+    @media screen and (min-width: 1140px) {
+      position: absolute;
+      left: 50%;
+      top: 3.5rem;
+      transform: translateX(-50%);
+    }
   }
 }
