--- a/src/assets/scss/pages/_searchresults.scss
+++ b/src/assets/scss/pages/_searchresults.scss
@@ -3,11 +3,16 @@
   flex-direction: column;
   justify-content: center; */
   margin-top: 7rem;
+  &__list-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+  }
   &__list {
     width: 910px;
     margin-left: auto;
     margin-right: auto;
     z-index: -1;
+    overflow-x: auto;
   }
 
   .searchbar__list {
