--- a/src/assets/scss/components/_searchbar.scss
+++ b/src/assets/scss/components/_searchbar.scss
@@ -21,7 +21,7 @@
     }
 
     @include mq(mobile, max) {
-      padding: 1rem 10rem 1rem 1.7rem;
+      width: 100%;
     }
 
     &::placeholder {
@@ -71,6 +71,7 @@
 
   &__samples {
     position: relative;
+    max-width: 100vw;
     margin-top: 1.8rem;
     border: 2px solid $border-primary-color;
     border-radius: 4px;
@@ -87,7 +88,7 @@
     overflow-y: auto;
     max-height: 300px;
     @media screen and (min-width: 1140px) {
-      padding: 3rem 1.8rem 3.6rem;
+      padding: 1.3rem 3rem 3.6rem;
       max-height: 300px;
     }
   }
@@ -103,16 +104,6 @@
     padding: 2rem;
     margin-left: -1.5rem;
     margin-right: -1.5rem;
-    &::after {
-      content: "";
-      background-color: $border-secondary-color;
-      height: 1px;
-      width: 96%;
-      position: absolute;
-      left: 50%;
-      bottom: 1.7rem;
-      transform: translateX(-50%);
-    }
     &--hover {
       &:hover {
         background-color: #c4c4c4;
@@ -150,7 +141,7 @@
   &__show-button {
     display: flex;
     justify-content: center;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     span {
       color: $showmore-button-color;
       font-size: $font-small;
