--- a/src/assets/scss/pages/_searchdetail.scss
+++ b/src/assets/scss/pages/_searchdetail.scss
@@ -6,67 +6,75 @@
   box-shadow: 0 0 0 0.75pt #d1d1d1, 0 0 3pt 0.75pt #ccc;
   margin-bottom: 0.5in;
   text-align: center;
-  img {
-    max-width: 100%;
-  }
-}
-@media screen and (max-width: 830px) {
-  .page {
+
+  @media screen and (max-width: 830px) {
     width: 100%;
     height: auto;
   }
-}
 
-.margins {
-  /*background:#EEE;*/
-  margin: 0;
-  margin-left: 0.5in;
-  margin-right: 0.5in;
-  margin-top: 0.5in;
-  padding-top: 0.5in;
-  padding-bottom: 0.5in;
-}
+  img {
+    max-width: 100%;
+  }
 
-.basic-info {
-  address {
-    display: flex;
-    flex-direction: column;
-    span {
-      display: box;
+  .margins {
+    margin: 0;
+    margin-left: 0.5in;
+    margin-right: 0.5in;
+    margin-top: 0.5in;
+    padding-top: 0.5in;
+    padding-bottom: 0.5in;
+  }
+
+  .basic-info {
+    address {
+      display: flex;
+      flex-direction: column;
+      span {
+        display: box;
+      }
     }
   }
-}
 
-h1,
-.location {
-  text-transform: capitalize;
-}
+  h1,
+  .location {
+    text-transform: capitalize;
+  }
 
-h1 {
-  font-size: 2rem;
-}
-h2 {
-  font-size: 1.75rem;
-  margin-bottom: 20px;
-}
-h3 {
-  font-size: 1.25rem;
-}
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.75rem;
+    margin-bottom: 20px;
+  }
+  h3 {
+    font-size: 1.25rem;
+  }
 
-.detail-text {
-  font-size: 1.5rem;
-  line-height: 1.6;
-  margin-bottom: 10px;
-}
+  .detail-text {
+    font-size: 1.5rem;
+    line-height: 1.6;
+    margin-bottom: 10px;
+  }
 
-hr {
-  border: none;
-  border-bottom: 1px solid #000;
-  margin: 20px 0;
-}
+  .home-button {
+    font-size: $font-big;
+    color: #000;
+    text-align: left;
+    &:hover {
+      color: $hover-button-bg-color;
+    }
+  }
 
-.center {
-  text-align: center;
-  margin-left: 0;
-  margin-right: 0;
+  hr {
+    border: none;
+    border-bottom: 1px solid #000;
+    margin: 20px 0;
+  }
+
+  .center {
+    text-align: center;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
