--- a/src/assets/scss/components/_searchbar.scss
+++ b/src/assets/scss/components/_searchbar.scss
@@ -21,7 +21,7 @@
     }
 
     @include mq(mobile, max) {
-      width: 100%;
+      width: 90vw;
     }
 
     &::placeholder {
@@ -71,14 +71,16 @@
 
   &__samples {
     position: relative;
-    max-width: 100vw;
+    max-width: 90vw;
     margin-top: 1.8rem;
+    margin-left: auto;
+    margin-right: auto;
     border: 2px solid $border-primary-color;
     border-radius: 4px;
     z-index: 5;
     background-color: white;
 
-    @media screen and (min-width: 1140px) {
+    @media screen and (min-width: 920px) {
       width: 720px;
       display: inline-block;
     }
